# column-sketch

./: .gitignore  Cargo.toml  README.md  example.parquet  parquet.py  parquet_no_block.py  plot.py  tst.py
.github/workflows/: build.yaml
column-sketch-arrow/: Cargo.toml
column-sketch-arrow/examples/: read_parquet.rs
column-sketch-arrow/src/: lib.rs
column-sketch-core/: Cargo.toml
column-sketch-core/benches/: bench.rs
column-sketch-core/src/: lib.rs  traits.rs
column-sketch-eval/: Cargo.toml
column-sketch-eval/benches/: micro_benchmark.rs  parquet_benchmark.rs
column-sketch-eval/src/: lib.rs  parquet.rs  test.rs  util.rs
pqs/: 0.2.parquet  0.4.parquet  0.6.parquet  0.8.parquet  sortedness=0.2.parquet  sortedness=0.4.parquet  sortedness=0.6.parquet  sortedness=0.8.parquet  sortedness=1.0.parquet
