[workspace]
members = ["column-sketch-core", "column-sketch-eval"]
resolver = "2"

[workspace.dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rstest = "0.18.2"
arrow = { version = "50.0.0", features = ["prettyprint"] }
parquet = { version = "50.0.0", features = ["experimental", "async"] }
bytes = "1.5.0"
tokio = { version = "1.36.0", features = ["fs"] }
anyhow = "1.0.81"

column-sketch-core = { path = "column-sketch-core" }
