[package]
name = "column-sketch-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
column-sketch-core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
