[package]
name = "column-sketch-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
column-sketch-core = { workspace = true }
futures = "0.3.30"
rand = { workspace = true }
rand_distr = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
plotters = "0.3.5"

[dev-dependencies]
rstest = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "micro_benchmark"
harness = false

[[bench]]
name = "parquet_benchmark"
harness = false
